// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`simple chat > simple chat 1`] = `
"> hello world
▼
 ╭─────────────────────────────────────────────────────────────────────────────────────────────────╮
 │Hello, world!                                                                                    │
 ╰─────────────────────────────────────────────────────────────────────────────────────────────────╯

╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ >                                                                                                │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  / for commands                                                    alt + ⏎ for newline ·13 tokens"
`;

exports[`simple chat > simple chat initial 1`] = `
"
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ >                                                                                                │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  / for commands                                                     alt + ⏎ for newline ·0 tokens"
`;
